--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -45,14 +45,16 @@
     }
 }
 
-@media (max-width:200px){
+@media (max-width:300px){
 
     .container{
         padding: 1rem;
+        
     }
     .celphone{
         left: 0%;
         margin-top: 10rem;
+        z-index: 1;
     }
 
     .right .comment{
