--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -34,7 +34,7 @@
         
 }
 
-@media (max-width:400px){
+/* @media (max-width:400px){
     .celphone{
         margin-top: 8rem;
     }
@@ -62,4 +62,4 @@
        margin-top: 10rem;
        
     }
-}
+} */
