--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,46 +6,68 @@ body{
 }
 
 .container{
-    display: flex;
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-
+    position: relative;
 }
 
-.left, .right {
-    flex: 1; 
+.background{
+    position: relative;
     display: flex;
-    position: relative;
-    align-items: center;
+    height: 100%;
+    justify-content: space-between;
+    z-index: 0;
 
 }
 
-.left{
-    position: relative;
+.background .back-left, .background .back-right{
+    position: absolute;
+    height: 70rem;
+    width: 37rem;
 }
 
-.back-image-left, .back-image-right{
-    height: 110%;
-    width: 89%;
-}
-
-.back-image-left{
+.background .back-left{
+    left: -5rem;
     background-color: var(--primery-2);
-
-    border-bottom-right-radius: 50% 30%;
-    border-bottom-left-radius: 50% 30%;
-    transform: translateX(-35%) translateY(-20%);
+    border-radius: 0 0 20rem 20rem;
+    /* border-bottom-right-radius: 50% 30%;
+    border-bottom-left-radius: 50% 30%; */
+    transform: translateX(0) translateY(-20%);
 }
 
-/* TOP CELPHONE */
+.background .back-right{
+    right: -5rem;
+    bottom: 0;
+    background-color: var(--secundary-2);
+    border-radius: 20rem 20rem 0 0;
+    /* border-top-right-radius: 50% 30%;
+    border-top-left-radius: 50% 30%; */
+    transform: translateX(0) translateY(20%); 
+}
+
+.sections {
+    display: flex;
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    justify-content: center;
+    align-items: center;
+}
+
+.sections .left, .sections .right {
+    width: 50%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sections .right{
+    padding-right: 20rem;
+}
 
 .celphone{
-    position: absolute;
-    bottom: 0; 
-    left: 48.5%;  
-    top: 50%; 
-    transform: translateY(-50%);
     width: 270px;
     height: 500px;
     background-color: var(--secundary-1);
@@ -236,13 +258,8 @@ body{
     border-radius: 100px;
 }
 
-
 .right .comment{
-    position: absolute;
-    max-width: 41rem;
     line-height: 2.5rem;
-
-    z-index: 1;
 
 }
 
@@ -257,11 +274,4 @@ body{
     font-size: 1.5rem;
     color: var(--primery-6);
     
-}
-
-.right .back-image-right{
-    background-color: var(--secundary-2);   
-    border-top-right-radius: 50% 30%;
-    border-top-left-radius: 50% 30%;
-    transform: translateX(55%) translateY(20%);
 }
