--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,39 +1,57 @@
-@media (max-width:1100px){
-    .right .comment{
-        left: 20%;
-        margin-right: 2rem;
-        text-align: center;
+@media(max-width: 760px){
+    .sections .right{
+        padding-right: 5rem;
     }
+
+
 }
 
-@media (max-width:780px){
+@media(max-width: 440px){
     .container{
+        max-height: 950px;
+        overflow: visible;
+    }
+
+    .sections{
+        padding: 5rem 0;
         flex-direction: column;
-        padding: 5rem;
-    }
-    
-    .celphone{
-        left: 30%;
-    }
-}
-
-@media (max-width:350px){
-    .container{
-        gap: 15rem;
-        padding: 2rem;
+        gap: 10rem;
     }
 
-    .celphone{
-        left: 0%;
-        margin-top: 10rem;
+    .sections .left, .sections .right {
+        height: auto;
+    }
+
+    .sections .right{
+        padding-right: 0;
+        text-align: center;
+        width: 85%;
+    }
+
+    .background .back-left,
+    .background .back-right {
+        position: fixed; 
 
     }
 
-    .right .comment{
-        left: 0%;
-        margin-top: 10rem;
-        padding-bottom: 2rem;
-    }
+    .background .back-left{
         
-}
+        transform: translateX(-35%) translateY(-30%);
+    }
 
+    .background .back-right{
+        
+        transform: translateX(35%) translateY(30%); 
+    }
+}
+@media(max-width: 350px){
+    .background .back-left{
+        
+        transform: translateX(-35%) translateY(-40%);
+    }
+
+    .background .back-right{
+        
+        transform: translateX(35%) translateY(40%); 
+    }
+}
